--- a/templates/admin/admin_client/index.html.twig
+++ b/templates/admin/admin_client/index.html.twig
@@ -1,47 +1,56 @@
 {{ include('admin/navAdmin.html.twig') }}
 
-{% block title %}Client index{% endblock %}
+{% block title %}Client index
+{% endblock %}
 
 {% block body %}
-  <section class="client">
-    
-     <h1 class="heading"> Gestions <span>Clients</span> </h1>
+	<div class="container p-6">
+		<section class="client">
 
-    <table class="table">
-        <thead>
-            <tr >
-                <th>Email</th>
-                <th>Roles</th>
-                {# <th>Password</th> #}
-                <th>NomClient</th>
-                <th>PrenomClient</th>
-                <th>IsVerified</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for client in clients %}
-            <tr>
-        
-                <td>{{ client.email }}</td>
-                <td>{{ client.roles ? client.roles|json_encode : '' }}</td>
-                {# <td>{{ client.password }}</td> #}
-                <td>{{ client.nomClient }}</td>
-                <td>{{ client.prenomClient }}</td>
-                <td>{{ client.isVerified ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('app_admin_client_show', {'id': client.id}) }}">show</a>
-                    <a href="{{ path('app_admin_client_edit', {'id': client.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <a class="btn" href="{{ path('app_admin_client_new') }}">Create new</a>
-    </section>
-{% endblock %}
+			<div class="row">
+				<div class="col-12 text-center mt-3 mb-5">
+					<h1>Gestions Clients</h1>
+				</div>
+			</div>
+
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Email</th>
+						<th>Roles</th>
+						{# <th>Password</th> #}
+						<th>NomClient</th>
+						<th>PrenomClient</th>
+						<th>IsVerified</th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for client in clients %}
+						<tr>
+
+							<td>{{ client.email }}</td>
+							<td>{{ client.roles ? client.roles|json_encode : '' }}</td>
+							{# <td>{{ client.password }}</td> #}
+							<td>{{ client.nomClient }}</td>
+							<td>{{ client.prenomClient }}</td>
+							<td>{{ client.isVerified ? 'Yes' : 'No' }}</td>
+							<td>
+								<a href="{{ path('app_admin_client_show', {'id': client.id}) }}">show</a>
+								<a href="{{ path('app_admin_client_edit', {'id': client.id}) }}">edit</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="8">no records found</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+
+			
+             <button type="button" class="btn btn-outline-success"><a class="btn" href="{{ path('app_admin_client_new') }}">Create new</a></button>
+		</section>
+        </div>
+	{% endblock %}
