--- a/templates/parfum/coffret.html.twig
+++ b/templates/parfum/coffret.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 	<section class="home" id="home">
 
-		<img data-speed="5" class="home-parallax" src="{{ asset('asset/image/Palette.png') }}" alt="">
+		<img data-speed="5" class="home-parallax" src="{{ asset('asset/image/coffret.jpg') }}" alt="">
 		<h3 data-speed="-2" class="heading" data-speed="-2">Nos
 			<span>COFFRETS</span>
 		</h3>
