--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -15,19 +15,19 @@
         <div class="boxx">
             <h3>quick links</h3>
             <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> vehicles </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> maquillages </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> services </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> findall </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> reviews </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> parfum </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Avis </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> contact </a>
         </div>
 
         <div class="boxx">
             <h3>contact info</h3>
             <a  href="{{ path('app_politique_confidentialite') }}"> En cliquant sur le bouton S'ABONNER, vous acceptez notre<spam class="politique"> Politique de confidentialité</spam>  </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india - 400104 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +333-222-3333 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> benradi.houda@gmail.com </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> FRANCE </a>
         </div>
 
         <div class="boxx">
@@ -41,7 +41,7 @@
 
     </div>
 
-    <div class="credit"> created by mr. web designer | all rights reserved </div>
+    <div class="credit">Crée par EL KABLI HOUDA </div>
 
 </section>
 
