--- a/templates/admin/admin_categorie/edit.html.twig
+++ b/templates/admin/admin_categorie/edit.html.twig
@@ -3,11 +3,23 @@
 {% block title %}Edit Categorie{% endblock %}
 
 {% block body %}
-    <h1>Edit Categorie</h1>
+	<div class="container p-6">
+  
+				<div class="col-12 text-center mt-3 mb-5">
+					<h1>Edit Categorie</h1>
+				</div>
+			
+
+    
 
     {{ include('admin/admin_categorie/_form.html.twig', {'button_label': 'Update'}) }}
+      <button type="button" class="btn btn-outline-success">
+				  <a href="{{ path('app_admin_categorie_index') }}">back to list</a>
+			</button>
 
-    <a href="{{ path('app_admin_categorie_index') }}">back to list</a>
+
+   
 
     {{ include('admin/admin_categorie/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
