--- a/templates/admin/admin_categorie/new.html.twig
+++ b/templates/admin/admin_categorie/new.html.twig
@@ -3,9 +3,20 @@
 {% block title %}New Categorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Categorie</h1>
+	<div class="container p-6">
+    <div class="row">
+				<div class="col-12 text-center mt-3 mb-5">
+					 <h1>Create new Categorie</h1>
+				</div>
+		
 
     {{ include('admin/admin_categorie/_form.html.twig') }}
 
-    <a href="{{ path('app_admin_categorie_index') }}">back to list</a>
+   
+
+    
+			<button type="button" class="btn btn-outline-success">
+				 <a href="{{ path('app_admin_categorie_index') }}">back to list</a>
+			</button>
+    </div>
 {% endblock %}
