--- a/templates/admin/admin_client/edit.html.twig
+++ b/templates/admin/admin_client/edit.html.twig
@@ -1,13 +1,22 @@
-{{ include('admin/navAdmin.html.twig') }}
+{% extends 'base.html.twig' %}
 
 {% block title %}Edit Client{% endblock %}
 
 {% block body %}
-    <h1>Edit Client</h1>
+<div class="container p-6">
+   
+				<div class="col-12 text-center mt-3 mb-5">
+				<h1>Edit Client</h1>
+				</div>
+    
 
     {{ include('./admin/admin_client/_form.html.twig', {'button_label': 'Update'}) }}
+     <button type="button" class="btn btn-outline-success">
+				 <a href="{{ path('app_admin_client_index') }}">back to list</a>
+			</button>
 
-    <a href="{{ path('app_admin_client_index') }}">back to list</a>
+    
 
     {{ include('admin/admin_client/_delete_form.html.twig') }}
+   </div> 
 {% endblock %}
