--- a/templates/admin/admin_client/show.html.twig
+++ b/templates/admin/admin_client/show.html.twig
@@ -1,9 +1,14 @@
-{{ include('admin/navAdmin.html.twig') }}
+{% extends 'base.html.twig' %}
 
 {% block title %}Client{% endblock %}
 
 {% block body %}
-    <h1>Client</h1>
+<div class="container p-6">
+   
+				<div class="col-12 text-center mt-3 mb-5">
+				<h1>Client</h1>
+				</div>
+    
 
     <table class="tableClient">
         <tbody>
@@ -19,10 +24,7 @@
                 <th>Roles</th>
                 <td>{{ client.roles ? client.roles|json_encode : '' }}</td>
             </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ client.password }}</td>
-            </tr>
+           
             <tr>
                 <th>NomClient</th>
                 <td>{{ client.nomClient }}</td>
@@ -37,10 +39,19 @@
             </tr>
         </tbody>
     </table>
+      <button type="button" class="btn btn-outline-success">
+				   <a  href="{{ path('app_admin_client_index') }}">back to list</a>
 
-    <a  href="{{ path('app_admin_client_index') }}">back to list</a>
+			</button>
 
-    <a  href="{{ path('app_admin_client_edit', {'id': client.id}) }}">edit</a>
+  <button type="button" class="btn btn-outline-success">
+				   <a  href="{{ path('app_admin_client_edit', {'id': client.id}) }}">edit</a>
+			</button>
+
+
+   
+ 
 
     {{ include('admin/admin_client/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
