--- a/templates/admin/admin_produit/edit.html.twig
+++ b/templates/admin/admin_produit/edit.html.twig
@@ -3,12 +3,21 @@
 {% block title %}Edit Produit{% endblock %}
 
 {% block body %}
-<br><br><br><br><br>
-    <h1>Edit Produit</h1>
+<div class="container p-6">
+   
+				<div class="col-12 text-center mt-3 mb-5">
+				 <h1>Edit Produit</h1>
+				</div>
+		
+   
 
     {{ include('admin/admin_produit/_form.html.twig', {'button_label': 'Update'}) }}
+      <button type="button" class="btn btn-outline-success">
+				   <a href="{{ path('app_admin_produit_index') }}">back to list</a>
+			</button>
 
-    <a href="{{ path('app_admin_produit_index') }}">back to list</a>
+
+   
 
     {{ include('admin/admin_produit/_delete_form.html.twig') }}
 {% endblock %}
