--- a/templates/admin/admin_produit/index.html.twig
+++ b/templates/admin/admin_produit/index.html.twig
@@ -1,51 +1,64 @@
 {{ include('admin/navAdmin.html.twig') }}
 
-{% block title %}GESTION DES PROUDUITS{% endblock %}
+{% block title %}GESTION DES PROUDUITS
+{% endblock %}
 
 {% block body %}
- <section class="client">
-   >
-      <h1 class="heading"> Gestions <span>Produits</span> </h1>
-  <a  class="btn"  href="{{ path('app_admin_produit_new') }}">Create new</a>
-  <br></br>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>ImageProduit</th>
-                <th>TitreProduit</th>
-                <th>DescProduit</th>
-                <th>PrixProduit</th>
-                <th>Categorie</th>
-                <th>DateArrive</th>
-                <th>actions</th>
 
-            </tr>
-        </thead>
-        <tbody>
-        {% for produit in produits %}
-            <tr>
-                <td>{{ produit.id }}</td>
-                  <td> <img src="{{asset('upload/' ~  produit.imageProduit ) }}" alt="Hostinger"  width=20%> </td>
-                <td>{{ produit.titreProduit }}</td>
-                <td>{{ produit.descProduit }}</td>
-                <td>{{ produit.prixProduit }}</td>
-                 <td>{{ produit.categorieR }}</td>
-                <td>{{ produit.dateArrive ? produit.dateArrive|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_admin_produit_show', {'id': produit.id}) }}">show</a>
-                    <a href="{{ path('app_admin_produit_edit', {'id': produit.id}) }}">edit</a>
-                </td>
-                
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<div class="container p-6">
+		<section class="client">
 
-    <a  class="btn" href="{{ path('app_admin_produit_new') }}">Create new</a>
-    </section >
+
+			<div class="row">
+				<div class="col-12 text-center mt-3 mb-5">
+					<h1>Gestions Produits</h1>
+				</div>
+			</div>
+
+			 <button type="button" class="btn btn-outline-warning"><a class="btn" href="{{ path('app_admin_produit_new') }}">Create new</a></button>
+			
+			<br></br>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>ImageProduit</th>
+					<th>TitreProduit</th>
+					<th>DescProduit</th>
+					<th>PrixProduit</th>
+					<th>Categorie</th>
+					<th>DateArrive</th>
+					<th>actions</th>
+
+				</tr>
+			</thead>
+			<tbody>
+				{% for produit in produits %}
+					<tr>
+						<td>{{ produit.id }}</td>
+						<td>
+							<img class="adminProduit" src="{{asset('upload/' ~ produit.imageProduit ) }}" alt="Hostinger" >
+						</td>
+						<td>{{ produit.titreProduit }}</td>
+						<td>{{ produit.descProduit }}</td>
+						<td>{{ produit.prixProduit }}</td>
+						<td>{{ produit.categorieR }}</td>
+						<td>{{ produit.dateArrive ? produit.dateArrive|date('Y-m-d') : '' }}</td>
+						<td>
+							<a href="{{ path('app_admin_produit_show', {'id': produit.id}) }}">show</a>
+							<a href="{{ path('app_admin_produit_edit', {'id': produit.id}) }}">edit</a>
+						</td>
+
+					</tr>
+				{% else %}
+					<tr>
+						<td colspan="7">no records found</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+
+		 <button type="button" class="btn btn-outline-warning"><a class="btn" href="{{ path('app_admin_produit_new') }}">Create new</a></button>
+	</section>
+    </div>
 {% endblock %}
