--- a/templates/admin/admin_produit/show.html.twig
+++ b/templates/admin/admin_produit/show.html.twig
@@ -3,9 +3,16 @@
 {% block title %}Produit{% endblock %}
 
 {% block body %}
-    <h1>Produit</h1>
 
-    <table class="table">
+<div class="container p-6">
+	<div class="row">
+			<div class="col-12 text-center mt-3 mb-5">
+				 <h1>Produit</h1>
+			</div>
+		</div>
+   
+
+    <table class="table table-danger ">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -13,7 +20,7 @@
             </tr>
             <tr>
                 <th>ImageProduit</th>
-                  <td> <img src="{{asset('upload/' ~  produit.imageProduit ) }}" alt="Hostinger" width="20%"> </td>
+                  <td> <img class="adminProduit" src="{{asset('upload/' ~  produit.imageProduit ) }}" alt="Hostinger" > </td>
             </tr>
             <tr>
                 <th>TitreProduit</th>
@@ -35,10 +42,14 @@
 
         </tbody>
     </table>
+   </div> 
+<div class="d-grid gap-2 col-6 mx-auto">
+    
+    <button type="button" class="btn btn-outline-success"><a href="{{ path('app_admin_produit_index') }}">back to list</a></button>
 
-    <a href="{{ path('app_admin_produit_index') }}">back to list</a>
-
-    <a href="{{ path('app_admin_produit_edit', {'id': produit.id}) }}">edit</a>
+  <br>
+    <button type="button" class="btn btn-outline-success"><a href="{{ path('app_admin_produit_edit', {'id': produit.id}) }}">edit</a></button>
 
     {{ include('admin/admin_produit/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
