--- a/templates/maquillage/levres.html.twig
+++ b/templates/maquillage/levres.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <section class="home" id="home">
 
-    <img data-speed="5" class="home-parallax" src="{{ asset('asset/image/Palette.png') }}" alt="">
+    <img data-speed="5" class="home-parallax" src="{{ asset('asset/image/rouge-levres.jpg') }}" alt="">
 	 <h3 data-speed="-2" class="heading" data-speed="-2">MAKEUP  <span>LEVRES</span></h3>
 						
 </section>
