--- a/templates/maquillage/teint.html.twig
+++ b/templates/maquillage/teint.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <section class="home" id="home">
 
-    <img data-speed="5" class="home-parallax" src="{{ asset('asset/image/Palette.png') }}" alt="">
+    <img data-speed="5" class="home-parallax" src="{{ asset('asset/image/fond-de-teint-clinique.jpg') }}" alt="">
 	 <h3 data-speed="-2" class="heading" data-speed="-2">MAKEUP  <span>TIENT</span></h3>
 						
 </section>
@@ -19,9 +19,9 @@
 
 								 <img src="{{asset('upload/' ~ produit.imageProduit )}}" alt="">
 							<div class="content">
-								<h3>
+								<h4>
 									<a href="{{ path('app_produit_show', {'id': produit.id}) }}">{{ produit.titreProduit }}</a>
-								</h3>
+								</h4>
 								<div class="stars">
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
